@@ -1,5 +1,7 @@
 Revision history for Gimp-Perl extension.
 
+	- updated perlotine.
+
 1.096 Thu Jul  8 21:36:36 CEST 1999
 	- fix around PDL-2.002 exporting its own ppport.h.
         - new scripts examples/frame_reshuffle and examples/frame_filter.
